--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
     -->
     <title>2D Football</title>
   </head>
+  <style>
+    body {
+      height: 100%;
+      margin: 0px;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
