--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,10 @@
     -->
     <title>2D Football</title>
   </head>
-  <style>
-    body {
-      height: 100%;
-      margin: 0px;
-    }
-  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
